# fda-warning-letter-analysis

./: LICENSE  README.md  fda_warning_letter_analysis.ipynb  methodology.md  pyproject.toml
data/: fda-warning-letters.xlsx  fda_all_warning_letters.csv  llm_results.jsonl
data/letters/: AACE Pharmaceuticals Inc._517.html  ABR Laboratory LLC_707.html  ALI Pharmaceutical Manufacturing LLC_1439.html  ASP Global LLC. dba Anatomy Supply Partners LLC._16.html  Abiomed Inc._1466.html  Abraxis Bioscience LLC_2027.html  Absara Cosmetics S.A.P.I DE C.V._3200.html  Absolutely Natural_21.html  Accra-Pac Inc. dba Voyant Beauty_1783.html  Accu Bio-Chem Laboratories_2491.html  Accupack Midwest Inc._896.html  Acme United Corporation_174.html  Acrostak Schweiz AG_1432.html  Adamson Analytical Laboratories Inc._2725.html  Adept Medical Ltd._804.html  Aerosol and Liquid Packaging Inc._898.html  Agropharma Laboratories Inc._2468.html  Aire-Master of America Inc._2308.html  Aizu Olympus Co. Ltd._1930.html  Akron Formulations India Private Limited_763.html  Allay Pharmaceuticals LLC_3230.html  Allovate Therapeutics LLC_185.html  AmLion Toothpaste Mfg. Sdn. Bhd._1393.html  AmWiner  Raphe Holdings LLC  dba rapheGenerics Corp_706.html  American Cleaning Solutions_2065.html  Amman Pharmaceutical Industries_1250.html  Amneal Pharmaceuticals LLC_336.html  Analytical Food Laboratories Inc._833.html  Anhui Hanbon Daily Chemical Co. Ltd._360.html  Antaria Pty. Ltd._1181.html  Apotex Inc._156.html  Argon Medical Productions  Vertrieb Gesellschaft MBH  CO_852.html  (+385 more)
results/: summary.json
